# backend

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  payment.txt
admin/: Cargo.toml  README.md
admin/src/account/: login.rs  profile.rs
admin/src/log/: customer_log.rs  merchant_log.rs  system_log.rs
admin/src/monitor/: report.rs  website_info.rs
admin/src/settings/: email.rs  payment.rs  website.rs
admin/src/user/: customer.rs
core/: Cargo.toml  README.md
core/src/entities/: admin.rs  customer.rs  logger_conf.rs  logging.rs  merchant.rs  order.rs  payment_record.rs  permission.rs  product.rs  report.rs  web_profile.rs
core/src/error/: error_list.rs
core/src/middleware/: auth.rs  cors.rs  csrf.rs  logging.rs  request_id.rs  session.rs
core/src/model/: response.rs
core/src/settings/: config.rs
core/src/utils/: crypto.rs  database.rs  email.rs  redis.rs  snowflake.rs
customer/: Cargo.toml  README.md
customer/src/account/: register.rs
merchant/: Cargo.toml  README.md
open_api/: Cargo.toml  README.md
payment/: Cargo.toml  README.md
