[package]
name = "rsws"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "admin",
    "core",
    "customer",
    "merchant",
    "payment",
    "bin",
    "open_api",
]

[workspace.dependencies]
# Salvo 框架及其组件
salvo = { git = "https://github.com/salvo-rs/salvo", features = ["full", "session", "oapi", "logging", "static", "request-id", "anyhow"] }

# 数据库相关
sea-orm = { git = "https://github.com/SeaQL/sea-orm", features = ["runtime-tokio-rustls", "postgres", "macros"] } # 版本 1.1.12 是 crates.io 上的最新版本

# Redis
redis = { version = "0.31.0", features = ["tokio-comp"] } # 版本 0.31.0 是 crates.io 上的最新版本

# 支付系统
anychain_tron = { git = "https://github.com/0xcregis/anychain", package = "anychain_tron" }
anychain_eth = { git = "https://github.com/0xcregis/anychain", package = "anychain_eth" }

# 基础工具
tokio = { version = "1.45.1", features = ["full"] } # 版本 1.45.1 是 crates.io 上的最新版本
serde = { version = "1.0", features = ["derive"] } # 版本 1.0 是 crates.io 上的最新版本
serde_json = "1.0" # 版本 1.0 是 crates.io 上的最新版本
config = "0.15.11" # 版本 0.15.11 是 crates.io 上的最新版本
tracing = "0.1.41" # 版本 0.1.41 是 crates.io 上的最新版本
tracing-subscriber = "0.3" # 版本 0.3 是 crates.io 上的最新版本
anyhow = "1.0" # 版本 1.0 是 crates.io 上的最新版本
thiserror = "2.0.12" # 版本 2.0.12 是 crates.io 上的最新版本
async-trait = "0.1" # 版本 0.1 是 crates.io 上的最新版本
futures = "0.3" # 版本 0.3 是 crates.io 上的最新版本
chrono = { version = "0.4.38", features = ["serde"] } # 版本 0.4.38 是 crates.io 上的最新版本
bcrypt = "0.17.0" # 版本 0.17.0 是 crates.io 上的最新版本
lettre = { version = "0.11.7", features = ["tokio1", "tokio1-native-tls"] } # 版本 0.11.7 是 crates.io 上的最新版本
reqwest = { version = "0.12.4", features = ["json"] } # 版本 0.12.4 是 crates.io 上的最新版本
snowflake = "1.3.0" # Assuming snowflake crate is used for Snowflake ID
url = "2.5.2" # Added based on payment module usage
rand = "0.9.1" # Added based on core module usage


[build-dependencies] 