[package]
name = "customer"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
# 根据需要添加其他工作空间依赖
salvo = { workspace = true, features = ["session"] }
anyhow = { workspace = true }
sea-orm = { workspace = true, features = ["postgres", "macros"] }
redis = { workspace = true, features = ["tokio-comp"] }
chrono = { workspace = true, features = ["serde"] }
snowflake = { workspace = true }
bcrypt = { workspace = true } 