[package]
name = "merchant"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
payment = { path = "../payment" }
# Add other workspace dependencies as needed
salvo = { workspace = true, features = ["session", "logging", "request-id", "anyhow"] }
anyhow = { workspace = true }
sea-orm = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
snowflake = { workspace = true }
bcrypt = { workspace = true } 