[package]
name = "merchant"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
payment = { path = "../payment" }
# 根据需要添加其他工作空间依赖
salvo = { workspace = true, features = ["session", "logging", "request-id", "anyhow"] }
anyhow = { workspace = true }
sea-orm = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
snowflake = { workspace = true }
bcrypt = { workspace = true } 