[package]
name = "payment"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
# 添加其他必要的依赖，例如 anychain 和 salvo features，如果未从工作空间继承
salvo = { workspace = true, features = ["oapi"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["full"] }
url = { workspace = true }
anychain_tron = { workspace = true }
anychain_eth = { workspace = true } 